// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component renders with back button 1`] = `
<DocumentFragment>
  <div
    class="flex items-center bg-gray-700 text-white justify-between sha h-16 px-4"
  >
    <div
      class="p-4 -ml-4"
    >
      <svg
        class="h-6 w-6"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 19l-7-7m0 0l7-7m-7 7h18"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <span
      class="text-4xl font-bold font-mono"
    >
      ScoreCard
    </span>
    <div
      class="w-6"
    />
  </div>
</DocumentFragment>
`;

exports[`Header component renders without back button 1`] = `
<DocumentFragment>
  <div
    class="flex items-center bg-gray-700 text-white justify-between sha h-16 px-4"
  >
    <div
      class="w-6"
    />
    <span
      class="text-4xl font-bold font-mono"
    >
      ScoreCard
    </span>
    <div
      class="w-6"
    />
  </div>
</DocumentFragment>
`;
